# _meta

./: .gitignore  README.md  function-catalog.yaml  type-catalog.yaml
docs/: codegen-content-hashing.md  control-plane-persistence-algebra.md  entity-validation-predicates.md
proto/: value.proto
rust/: Cargo.toml  build.rs
rust-store/: Cargo.toml
rust-store/migrations/: 0001_init.sql
rust-store/src/: error.rs  lib.rs  model.rs  store.rs
rust-store/tests/: integration.rs
rust-types/: Cargo.toml  build.rs
rust-types/src/: coeffects.rs  conformance.rs  effects.rs  external_fn.rs  lib.rs  native_fn.rs  udf_catalog.rs  validation.rs  value.rs  value_type_yaml.rs
rust/src/: cel_to_ir.rs  codegen.rs  coeffects.rs  effects.rs  event_proto_codegen.rs  lib.rs  main.rs  normalizer.rs  type_check.rs  udf_resolver.rs  value.rs
rust/tests/: codegen_snapshot.rs  expected_codegen_output.txt
