[package]
name = "meta-types"
version = "0.1.0"
edition = "2021"
publish = false
description = "Value types, proto serde, coeffects/effects, and native UDF traits"

[features]
yaml-catalog = ["serde", "serde_yaml"]

[dependencies]
prost = "0.13"
serde = { version = "1", features = ["derive"], optional = true }
serde_yaml = { version = "0.9", optional = true }

[build-dependencies]
prost-build = "0.13"
