[package]
name = "meta-codegen"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
cel-parser = "0.8"
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2"

[build-dependencies]
prost-build = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
